docs(变更)：变更git忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /.vitepress/dist
 /bun.lockb
 yarn.lock
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.vitepress/dist
+.vitepress/cache
